# Multi-human_Skeleton_RGBD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml  python_entrypoint.py  question.md
feature_extractor/: HumanKeypointsFilter.py  KalmanFilter.py  Outlier_filter.py  __init__.py  config.py  rviz2_maker.py  skeleton_extractor_node.py  skeleton_extractor_node_backup.py  utils.py
img/: rviz_config.rviz
launch/: right_wrist_node.launch  skeleton.launch  skeleton_extractor.launch
plot/: creat_gif_from_img.py  creat_video_from_img.py  plot_pickle.py  plot_pickle2.py  test_rosbag.py
scripts/: cmake_virtualenv_setup.py  python_entrypoint.py
skeleton_extractor/: HumanKeypointsFilter.py  Outlier_filter.py  __init__.py  config.py  rviz2_maker.py  skeleton_extractor_node.py
tests/: DEBUG_skeleton_extractor_node.py  creat_video_from_img.py  find_outlier.py  plot_keypoints.py  plot_pickle.py  read_data.ipynb  read_data.py  rosbag_test.py  rviz_test.py  test.ipynb  test.py  test0.pkl  test_Minimal_false.pkl  test_Minimal_true.pkl  view_config_test.py  yolo_v8_test.py
